# compare-building-data

./: .gitignore  .pre-commit-config.yaml  1_pull_data.ipynb  2_analysis.ipynb  LICENSE.md  README.md  analysis.ipynb  analysis_california_eci.ipynb  cbecs-analysis.ipynb  comstock_processor.py  cspell.json  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
datasets/: climate_zone_crosswalk.xlsx
datasets/cbecs/: lookups.py
datasets/comstock/: fields.txt
datasets/espm/: ESPM_AllBuildingTypes_AllClimateZones_AllPercentiles.xlsx  ESPM_allBuildingTypes_AllClimateZones.xlsx  energystar_data_by_category.csv  energystar_site_eui_by_category.csv  report-energy-use-site-eui-2024-08-27.csv
datasets/std100/: README.md  appendix_g.py  std100data.xlsx  std100data_percentiles_allclimatezones_allbuildingtypes.xlsx
figures/cec/: fields.txt
tests/: test_http.py
