[tool.poetry]
name = "compare-building-data"
version = "0.1.0"
description = "Compare results of ComStock, CBECS, and ASHRAE Std 100-2024."
authors = ["Nicholas Long <nllong>", "Lauren Kerr <lkerrnrel>"]
license = "BSD"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">2"
requests = "~2.31"
pathlib = "^1.0.1"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.5.1"
jinja2 = "^3.1.4"
tabulate = "^0.9.0"
geopandas = "^1.0.1"
nbformat = "^5.10.4"
nbconvert = "^7.16.6"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
mypy = "^0.991"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
files = [
    "your_module.py",
    "tests/"
]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
