[tool.poetry]
name = "compare-building-data"
version = "0.1.0"
description = "Compare results of ComStock, CBECS, and ASHRAE Std 100-2024."
authors = ["Nicholas Long <nllong>", "Lauren Kerr <lkerrnrel>"]
license = "BSD"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">2"
requests = "~2.32"
pathlib = "^1.0.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.7.2"
jinja2 = "^3.1.4"
tabulate = "^0.9.0"
geopandas = "^1.1.1"
nbformat = "^5.10.4"
nbconvert = "^7.16.6"
jupyter = "^1.1.1"
selenium = "^4.38.0"

# you must checkout comstock_processor manually for now
comstock-processor = {path = "../comstock_processor", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
mypy = "^1.17"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
files = [
    "your_module.py",
    "tests/"
]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
